added comments for section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    
+    //banner section
     <section class="banner">
       <header>
         <a href="#" class="logo">Prasad <span>X</span> Ware</a>
@@ -17,12 +19,16 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </header>
+      
+      //main content section
       <div class="content">
         <h2>I am <span id="text">Prasad</span></h2>
         <p>Let's break the Matrix</p>
         <button>Join Us</button>
         <button class="chat">Let's Chat</button>
       </div>
+
+      // day and night toggle
       <div class="dayNight">
         <ion-icon name="moon-outline"></ion-icon>
         <ion-icon name="sunny-outline"></ion-icon>
